--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <packaging>jar</packaging>
 
     <name>JobsReborn-PatchPlaceBreak</name>
-    <description>This is an extension of Jobs Reborn plugin for Bukkit servers</description>
+    <description>This is a place-break patch extension of Jobs Reborn plugin for Bukkit servers</description>
 
     <licenses>
         <license>
