--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,4 @@ version: ${version}
 author: Djaytan
 api-version: ${minecraft.api.version}
 main: ${package.root}.plugin.JobsRebornPatchPlaceBreakPlugin
+depend: [Jobs]
