--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
     <groupId>fr.djaytan.minecraft</groupId>
     <artifactId>mc-jobs-reborn-patch-place-break</artifactId>
-    <version>1.0.1</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>JobsReborn-PatchPlaceBreak</name>
