--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
         <lombok.version>1.18.24</lombok.version>
         <guice.version>5.1.0</guice.version>
         <sqlite.version>3.39.2.0</sqlite.version>
+        <hikaricp.version>5.0.1</hikaricp.version>
         <guava.version>31.1-jre</guava.version>
     </properties>
 
@@ -163,6 +164,11 @@
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>${sqlite.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>${hikaricp.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
