--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.djaytan.minecraft</groupId>
@@ -28,7 +28,9 @@
     <packaging>jar</packaging>
 
     <name>JobsReborn-PatchPlaceBreak</name>
-    <description>This is a place-break patch extension of Jobs Reborn plugin for Bukkit servers</description>
+    <description>
+        This is a place-break patch extension of Jobs Reborn plugin for Bukkit servers
+    </description>
 
     <licenses>
         <license>
@@ -42,9 +44,13 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.release>8</maven.compiler.release>
 
-        <minecraft.api.version>1.13</minecraft.api.version> <!-- The oldest API version available for this option -->
+        <minecraft.api.version>1.13
+        </minecraft.api.version> <!-- The oldest API version available for this option -->
         <spigot.api.version>1.19.2-R0.1-SNAPSHOT</spigot.api.version>
         <package.root>fr.djaytan.minecraft.jobs_reborn_patch_place_break</package.root>
+
+        <formatter.goal>format</formatter.goal>
+        <impsort.goal>sort</impsort.goal>
 
         <jobs.version>v4.17.2</jobs.version>
         <jetbrains.annotations.version>23.0.0</jetbrains.annotations.version>
@@ -77,6 +83,44 @@
         </resources>
         <plugins>
             <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <version>2.21.0</version>
+                <configuration>
+                    <configFile>${project.basedir}/eclipse-java-google-style.xml</configFile>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <lineEnding>LF</lineEnding>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>${formatter.goal}</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>net.revelc.code</groupId>
+                <artifactId>impsort-maven-plugin</artifactId>
+                <version>1.7.0</version>
+                <configuration>
+                    <groups>java.,javax.,org.,com.</groups>
+                    <staticGroups>java,*</staticGroups>
+                    <excludes>
+                        <exclude>**/thrift/*.java</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>sort-imports</id>
+                        <goals>
+                            <goal>${impsort.goal}
+                            </goal><!-- runs at process-sources phase by default -->
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
@@ -105,7 +149,9 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.3.0</version>
                 <configuration>
-                    <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
+                    <dependencyReducedPomLocation>
+                        ${project.build.directory}/dependency-reduced-pom.xml
+                    </dependencyReducedPomLocation>
                 </configuration>
                 <executions>
                     <execution>
@@ -130,6 +176,16 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>format-checker</id>
+            <properties>
+                <formatter.goal>validate</formatter.goal>
+                <impsort.goal>check</impsort.goal>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencies>
         <!-- Minecraft dependencies -->
