--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: echo 'export JAVA_1_17_HOME="$JAVA_HOME"' >> "$BASH_ENV"
       - run:
           name: Build
-          command: mvn compile
+          command: mvn compile -Pformat-checker
       - run:
           name: Test
           command: mvn test
