chore: update .editorconfig file

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,9 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.{cmd, bat}]
+end_of_line = crlf
+
 [*.xml]
 indent_size = 4
 
