--- a/pom.xml
+++ b/pom.xml
@@ -1,214 +1,228 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~ JobsReborn extension to patch place-break (Bukkit servers)
-  ~ Copyright (C) 2022 - Loïc DUBOIS-TERMOZ
-  ~
-  ~ This program is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ This program is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~ GNU General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
-  -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <groupId>fr.djaytan.minecraft</groupId>
+  <artifactId>mc-jobs-reborn-patch-place-break</artifactId>
+  <version>1.2.1</version>
+  <packaging>jar</packaging>
 
-    <groupId>fr.djaytan.minecraft</groupId>
-    <artifactId>mc-jobs-reborn-patch-place-break</artifactId>
-    <version>1.2.1</version>
-    <packaging>jar</packaging>
+  <name>JobsReborn-PatchPlaceBreak</name>
+  <description>This is a place-break patch extension of Jobs Reborn plugin for Bukkit servers</description>
 
-    <name>JobsReborn-PatchPlaceBreak</name>
-    <description>
-        This is a place-break patch extension of Jobs Reborn plugin for Bukkit servers
-    </description>
+  <licenses>
+    <license>
+      <name>GNU GENERAL PUBLIC LICENSE Version 3</name>
+      <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
+    </license>
+  </licenses>
 
-    <licenses>
-        <license>
-            <name>GNU GENERAL PUBLIC LICENSE Version 3</name>
-            <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
-        </license>
-    </licenses>
+  <properties>
+    <project.encoding>UTF-8</project.encoding>
+    <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+    <java.version>8</java.version>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
 
-        <!-- The oldest API version available for this option to prevent warning message -->
-        <minecraft.api.version>1.13</minecraft.api.version>
+    <!-- The oldest API version available for this option to prevent warning message -->
+    <minecraft.api.version>1.13</minecraft.api.version>
 
-        <spigot.api.version>1.8.8-R0.1-SNAPSHOT</spigot.api.version>
-        <package.root>fr.djaytan.minecraft.jobs_reborn_patch_place_break</package.root>
+    <spigot.api.version>1.8.8-R0.1-SNAPSHOT</spigot.api.version>
+    <package.root>fr.djaytan.minecraft.jobs_reborn_patch_place_break</package.root>
 
-        <formatter.goal>format</formatter.goal>
-        <impsort.goal>sort</impsort.goal>
+    <formatter.goal>format</formatter.goal>
+    <impsort.goal>sort</impsort.goal>
+    <sortpom.goal>sort</sortpom.goal>
 
-        <jobs.version>v4.17.2</jobs.version>
-        <jetbrains.annotations.version>23.0.0</jetbrains.annotations.version>
-        <lombok.version>1.18.24</lombok.version>
-        <guice.version>5.1.0</guice.version>
-        <sqlite.version>3.39.2.0</sqlite.version>
-        <hikaricp.version>4.0.3</hikaricp.version> <!-- Latest version compatible with Java 8 -->
-        <guava.version>31.1-jre</guava.version>
-    </properties>
+    <jobs.version>v4.17.2</jobs.version>
+    <jetbrains.annotations.version>23.0.0</jetbrains.annotations.version>
+    <lombok.version>1.18.24</lombok.version>
+    <guice.version>5.1.0</guice.version>
+    <sqlite.version>3.39.2.0</sqlite.version>
+    <!-- Latest version compatible with Java 8 -->
+    <hikaricp.version>4.0.3</hikaricp.version>
+    <guava.version>31.1-jre</guava.version>
+  </properties>
 
-    <repositories>
-        <repository>
-            <id>spigot-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
+  <dependencies>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>${guava.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>${guice.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>${hikaricp.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>${sqlite.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.Zrips</groupId>
+      <artifactId>Jobs</artifactId>
+      <version>${jobs.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+      <version>${jetbrains.annotations.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.spigotmc</groupId>
+      <artifactId>spigot-api</artifactId>
+      <version>${spigot.api.version}</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 
-    <build>
-        <defaultGoal>clean install</defaultGoal>
-        <finalName>${project.name}-${project.version}</finalName>
-        <resources>
-            <resource>
-                <directory>${project.basedir}/src/main/resources/</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>net.revelc.code.formatter</groupId>
-                <artifactId>formatter-maven-plugin</artifactId>
-                <!-- Don't bump this version! Latest available for JDK 8 -->
-                <version>2.16.0</version>
-                <configuration>
-                    <configFile>${project.basedir}/eclipse-java-google-style.xml</configFile>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <lineEnding>LF</lineEnding>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>${formatter.goal}</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>net.revelc.code</groupId>
-                <artifactId>impsort-maven-plugin</artifactId>
-                <!-- Don't bump this version! Latest available for JDK 8 -->
-                <version>1.6.2</version>
-                <configuration>
-                    <groups>java.,javax.,org.,com.</groups>
-                    <staticGroups>java,*</staticGroups>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>sort-imports</id>
-                        <goals>
-                            <goal>${impsort.goal}</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.3.0</version>
-                <configuration>
-                    <createDependencyReducedPom>false</createDependencyReducedPom>
-                    <transformers>
-                        <!-- Remove warning messages about duplicate manifest files -->
-                        <!-- Manifest file is useless for a JAR file to be used as a Bukkit plugin -->
-                        <transformer
-                            implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
-                            <resource>MANIFEST.MF</resource>
-                        </transformer>
-                    </transformers>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+  <repositories>
+    <repository>
+      <id>spigot-repo</id>
+      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+    </repository>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
 
-    <profiles>
-        <profile>
-            <id>format-checker</id>
-            <properties>
-                <formatter.goal>validate</formatter.goal>
-                <impsort.goal>check</impsort.goal>
-            </properties>
-        </profile>
-    </profiles>
+  <build>
+    <defaultGoal>clean install</defaultGoal>
+    <finalName>${project.name}-${project.version}</finalName>
+    <resources>
+      <resource>
+        <filtering>true</filtering>
+        <directory>${project.basedir}/src/main/resources/</directory>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <groupId>com.github.ekryd.sortpom</groupId>
+        <artifactId>sortpom-maven-plugin</artifactId>
+        <version>3.0.1</version>
+        <configuration>
+          <createBackupFile>false</createBackupFile>
+          <encoding>${project.encoding}</encoding>
+          <expandEmptyElements>false</expandEmptyElements>
+          <ignoreLineSeparators>false</ignoreLineSeparators>
+          <indentBlankLines>false</indentBlankLines>
+          <indentSchemaLocation>true</indentSchemaLocation>
+          <keepBlankLines>true</keepBlankLines>
+          <keepTimestamp>false</keepTimestamp>
+          <lineSeparator>\n</lineSeparator>
+          <nrOfIndentSpace>2</nrOfIndentSpace>
+          <predefinedSortOrder>recommended_2008_06</predefinedSortOrder>
+          <sortDependencies>scope,groupId,artifactId</sortDependencies>
+          <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
+          <sortExecutions>false</sortExecutions>
+          <sortModules>true</sortModules>
+          <sortPlugins>groupId,artifactId</sortPlugins>
+          <sortProperties>false</sortProperties>
+          <spaceBeforeCloseEmptyElement>true</spaceBeforeCloseEmptyElement>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>${sortpom.goal}</goal>
+            </goals>
+            <phase>compile</phase>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>net.revelc.code</groupId>
+        <artifactId>impsort-maven-plugin</artifactId>
+        <!-- Don't bump this version! Latest available for JDK 8 -->
+        <version>1.6.2</version>
+        <configuration>
+          <groups>java.,javax.,org.,com.</groups>
+          <staticGroups>java,*</staticGroups>
+        </configuration>
+        <executions>
+          <execution>
+            <id>sort-imports</id>
+            <goals>
+              <goal>${impsort.goal}</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+        <!-- Don't bump this version! Latest available for JDK 8 -->
+        <version>2.16.0</version>
+        <configuration>
+          <configFile>${project.basedir}/eclipse-java-google-style.xml</configFile>
+          <encoding>${project.build.sourceEncoding}</encoding>
+          <lineEnding>LF</lineEnding>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>${formatter.goal}</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.3.0</version>
+        <configuration>
+          <createDependencyReducedPom>false</createDependencyReducedPom>
+          <transformers>
+            <!-- Remove warning messages about duplicate manifest files -->
+            <!-- Manifest file is useless for a JAR file to be used as a Bukkit plugin -->
+            <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
+              <resource>MANIFEST.MF</resource>
+            </transformer>
+          </transformers>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
-    <dependencies>
-        <!-- Minecraft dependencies -->
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>${spigot.api.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.github.Zrips</groupId>
-            <artifactId>Jobs</artifactId>
-            <version>${jobs.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- Java dependencies -->
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>${jetbrains.annotations.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
-            <version>${guice.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>${sqlite.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>${hikaricp.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>${guava.version}</version>
-        </dependency>
-    </dependencies>
+  <profiles>
+    <profile>
+      <id>format-checker</id>
+      <properties>
+        <formatter.goal>validate</formatter.goal>
+        <impsort.goal>check</impsort.goal>
+        <sortpom.goal>verify</sortpom.goal>
+      </properties>
+    </profile>
+  </profiles>
 </project>
