--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,12 @@
   </licenses>
 
   <properties>
-    <!-- ==================== Encoding ==================== -->
+    <!-- ==================== General ==================== -->
     <project.encoding>UTF-8</project.encoding>
     <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
     <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
+    <package.root>fr.djaytan.minecraft.jobs_reborn_patch_place_break</package.root>
+    <package.lib>${package.root}.lib</package.lib>
 
     <!-- ==================== Java ==================== -->
     <java.version>8</java.version>
@@ -31,7 +33,6 @@
 
     <!-- ==================== Minecraft: Bukkit ==================== -->
     <spigot.api.version>1.8.8-R0.1-SNAPSHOT</spigot.api.version>
-    <package.root>fr.djaytan.minecraft.jobs_reborn_patch_place_break</package.root>
 
     <!-- ==================== Formatters ==================== -->
     <formatter.goal>format</formatter.goal>
@@ -46,7 +47,7 @@
     <!-- Latest version of Formatter compatible with Java 8: don't bump it! -->
     <formatter.maven.plugin.version>2.16.0</formatter.maven.plugin.version>
     <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
-    <maven.shade.plugin.version>3.3.0</maven.shade.plugin.version>
+    <maven.shade.plugin.version>3.4.1</maven.shade.plugin.version>
     <maven.clean.plugin.version>2.5</maven.clean.plugin.version>
     <maven.resources.plugin.version>2.6</maven.resources.plugin.version>
     <maven.surefire.plugin.version>2.12.4</maven.surefire.plugin.version>
@@ -56,12 +57,12 @@
     <!-- ==================== Dependencies versions ==================== -->
     <guava.version>31.1-jre</guava.version>
     <guice.version>5.1.0</guice.version>
+    <!-- Latest version of HikariCP compatible with Java 8: don't bump it! -->
     <hikaricp.version>4.0.3</hikaricp.version>
     <sqlite.version>3.39.3.0</sqlite.version>
     <jobs.version>v4.17.2</jobs.version>
     <annotations.jetbrains.version>23.0.0</annotations.jetbrains.version>
     <lombok.version>1.18.24</lombok.version>
-    <!-- Latest version of HikariCP compatible with Java 8: don't bump it! -->
   </properties>
 
   <dependencies>
@@ -74,6 +75,12 @@
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
       <version>${guice.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.zaxxer</groupId>
@@ -229,7 +236,46 @@
         <artifactId>maven-shade-plugin</artifactId>
         <version>${maven.shade.plugin.version}</version>
         <configuration>
+          <shadedArtifactAttached>false</shadedArtifactAttached>
           <createDependencyReducedPom>false</createDependencyReducedPom>
+          <artifactSet>
+            <includes>
+              <include>*:*</include>
+            </includes>
+          </artifactSet>
+          <filters>
+            <filter>
+              <artifact>*:*</artifact>
+              <excludes>
+                <exclude>META-INF/*.SF</exclude>
+                <exclude>META-INF/*.DSA</exclude>
+                <exclude>META-INF/*.RSA</exclude>
+              </excludes>
+            </filter>
+          </filters>
+          <relocations>
+            <relocation>
+              <pattern>com</pattern>
+              <shadedPattern>${package.lib}.com</shadedPattern>
+              <includes>
+                <include>com.**</include>
+              </includes>
+            </relocation>
+            <relocation>
+              <pattern>javax</pattern>
+              <shadedPattern>${package.lib}.javax</shadedPattern>
+              <includes>
+                <include>javax.**</include>
+              </includes>
+            </relocation>
+            <relocation>
+              <pattern>org</pattern>
+              <shadedPattern>${package.lib}.org</shadedPattern>
+              <includes>
+                <include>org.**</include>
+              </includes>
+            </relocation>
+          </relocations>
           <transformers>
             <!-- Remove warning messages about duplicate manifest files -->
             <!-- Manifest file is useless for a JAR file to be used as a Bukkit plugin -->
