--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
     <!-- Latest version of HikariCP compatible with Java 8: don't bump it! -->
     <hikaricp.version>4.0.3</hikaricp.version>
     <slf4j.version>2.0.4</slf4j.version>
-    <sqlite.version>3.39.3.0</sqlite.version>
+    <sqlite.version>3.39.4.1</sqlite.version>
     <jobs.version>v4.17.2</jobs.version>
     <annotations.jetbrains.version>23.0.0</annotations.jetbrains.version>
     <lombok.version>1.18.24</lombok.version>
@@ -85,6 +85,12 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <!-- Use the same logging implementation as Bukkit -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-jdk14</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
     <dependency>
@@ -115,13 +121,6 @@
       <artifactId>spigot-api</artifactId>
       <version>${spigot.api.version}</version>
       <scope>provided</scope>
-    </dependency>
-    <!-- Use the same logger implementation as the one used by Bukkit -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jul-to-slf4j</artifactId>
-      <version>${slf4j.version}</version>
-      <scope>runtime</scope>
     </dependency>
   </dependencies>
 
@@ -254,7 +253,7 @@
             <filter>
               <artifact>*:*</artifact>
               <excludes>
-                <exclude>module-info.class</exclude>
+                <exclude>**/module-info.class</exclude>
                 <exclude>META-INF/*.SF</exclude>
                 <exclude>META-INF/*.DSA</exclude>
                 <exclude>META-INF/*.RSA</exclude>
@@ -302,6 +301,10 @@
             <!-- Manifest file is useless for a JAR file to be used as a Bukkit plugin -->
             <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
               <resource>MANIFEST.MF</resource>
+            </transformer>
+            <!-- Prevent SQLite driver not found issue -->
+            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+              <resource>META-INF/services/java.sql.Driver</resource>
             </transformer>
           </transformers>
         </configuration>
