--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>fr.djaytan.minecraft</groupId>
   <artifactId>mc-jobs-reborn-patch-place-break</artifactId>
-  <version>1.2.1</version>
+  <version>1.3.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>JobsReborn-PatchPlaceBreak</name>
