--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
   </licenses>
 
   <scm>
-    <connection>scm:git:ssh://github.com/Djaytan/mc-jobs-reborn-patch-place-break.git</connection>
-    <developerConnection>scm:git:ssh://github.com/Djaytan/mc-jobs-reborn-patch-place-break.git</developerConnection>
+    <connection>scm:git:git@github.com:Djaytan/mc-jobs-reborn-patch-place-break.git</connection>
+    <developerConnection>scm:git:git@github.com:Djaytan/mc-jobs-reborn-patch-place-break.git</developerConnection>
     <url>https://github.com/Djaytan/mc-jobs-reborn-patch-place-break</url>
   </scm>
 
