--- a/pom.xml
+++ b/pom.xml
@@ -187,7 +187,7 @@
             <goals>
               <goal>${sortpom.goal}</goal>
             </goals>
-            <phase>compile</phase>
+            <phase>validate</phase>
           </execution>
         </executions>
       </plugin>
@@ -201,10 +201,10 @@
         </configuration>
         <executions>
           <execution>
-            <id>sort-imports</id>
             <goals>
               <goal>${impsort.goal}</goal>
             </goals>
+            <phase>validate</phase>
           </execution>
         </executions>
       </plugin>
@@ -222,6 +222,7 @@
             <goals>
               <goal>${formatter.goal}</goal>
             </goals>
+            <phase>validate</phase>
           </execution>
         </executions>
       </plugin>
